--- a/PetStoreApp/src/App.css
+++ b/PetStoreApp/src/App.css
@@ -5,14 +5,16 @@
 body {
     padding-top: 3rem;
     padding-bottom: 3rem;
+    background-color: rgb(203, 215, 251);
     color: rgb(var(--bs-tertiary-color-rgb));
   }
-  
+
   
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
   
   /* Carousel base class */
+
   .carousel {
     margin-bottom: 4rem;
   }
@@ -30,15 +32,42 @@ body {
   .carousel-item {
     height: 32rem;
   }
-  
-  .carousel-control-prev,
-  .carousel-control-next {
-    color: #000; /* Change the color to black */
+
+  .carousel-item img {
+    max-width: 100%;
+    /* height: 500px; Adjust the height as needed to ensure consistency */
+    object-fit: cover; /* Maintain aspect ratio and cover entire container */
   }
+
+  .transparent-bg {
+    background-color: rgba(213, 201, 99, 0.372); /* Adjust the alpha (opacity) value as needed */
+    padding: 20px; /* Add padding to create space between the text and container edges */
+  }
+  
+  
+  .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+    background-color: black; /* Change to your desired color */
+    }
+
+    .carousel-control-prev-icon::before,
+    .carousel-control-next-icon::before {
+    color: black; /* Change to your desired color */
+    }
   
   
   /* MARKETING CONTENT
   -------------------------------------------------- */
+  .team-heading-container {
+    text-align: center;
+    margin-bottom: 20px; /* Adjust as needed to control spacing */
+    padding: 10px; /* Add padding to create space between the heading and borders */
+  }
+
+  .team-heading-container h2 {
+    font-size: 3rem; /* Adjust the font size as needed */
+    font-weight: bold; /* Make the font bold */
+  }
   
   /* Center align the text within the three columns below the carousel */
   .marketing .col-lg-4 {
@@ -65,6 +94,22 @@ body {
   .featurette-heading {
     letter-spacing: -.05rem;
   }
+
+  .row.featurette {
+    padding-top: 50px; /* Add padding to the top */
+    padding-bottom: 50px; /* Add padding to the bottom */
+  }
+  
+  .featurette-heading,
+  .featurette p {
+    padding-right: 50px; /* Add padding to the right */
+    padding-left: 50px; /* Add padding to the left */
+  }
+  
+  .featurette-image {
+    padding: 50px; /* Add padding to all sides of the image */
+  }
+  
   
   /* rtl:end:remove */
   
