--- a/PetStoreApp/src/App.css
+++ b/PetStoreApp/src/App.css
@@ -5,7 +5,7 @@
 body {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    background-color: rgb(203, 215, 251);
+    background-color: rgb(192, 201, 226);
     color: rgb(var(--bs-tertiary-color-rgb));
   }
 
@@ -35,7 +35,7 @@ body {
 
   .carousel-item img {
     max-width: 100%;
-    /* height: 500px; Adjust the height as needed to ensure consistency */
+    height: 100%; 
     object-fit: cover; /* Maintain aspect ratio and cover entire container */
   }
 
