--- a/PetStoreApp/views/register.ejs
+++ b/PetStoreApp/views/register.ejs
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Register</h1>
+    <ul>
+        <% if(typeof errors != 'undefined') { %> <% errors.forEach(error =>{ %>
+        <li><%= errors.message %></li>
+        <% }) %> <% } %>
+        
+    </ul>
     <form action="/users/register" method="POST">
         <div>
             <input type="text" id="name" name="name" placeholder="Name" required/> 
