--- a/PetStoreApp/src/App.css
+++ b/PetStoreApp/src/App.css
@@ -116,7 +116,55 @@ body {
     padding: 50px; /* Add padding to all sides of the image */
   }
   
-  
+   .filter_parent {
+          background-color: #c0c0c0;
+          color: black;
+          cursor: pointer;
+          padding: 20px;
+          width:5%;
+          height:25%;
+          border: none;
+          text-align: left;
+          vertical-align:middle;
+          outline: none;
+          font-size: 15px;
+  	}
+  	.filter_body{
+          display: none;
+          overflow: hidden;
+          background-color:#b0b0b0;
+          padding:25px;
+          text-decoration: none;
+  	}
+  	.filter_type{
+
+  	}
+  	.hover_parent{
+  	    color:green;
+  		font-size:150%;
+  		padding-left: 30px;
+  		text-decoration: none;
+  	  	display:inline-block;
+    		vertical-align:middle;
+    		font-family: "Madimi One", sans-serif;
+  	}
+  	.hover_child_container{
+  		  display: none;
+  	  position: absolute;
+  	   text-decoration: none;
+  	  background-color: #f1f1f1;
+  	  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	  z-index: 1;
+  	}
+
+  	.filter_option{
+
+  	}
+  .hover_parent:hover
+   {
+   .hover_child_container {display: block;}
+
+   }
   /* rtl:end:remove */
   
   /* RESPONSIVE CSS
