--- a/PetStoreApp/src/App.css
+++ b/PetStoreApp/src/App.css
@@ -129,12 +129,16 @@ body {
           outline: none;
           font-size: 15px;
   	}
-  	.filter_body{
-          overflow: hidden;
-          background-color:#b0b0b0;
-          padding:25px;
-          text-decoration: none;
-  	}
+.filter_body {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    background-color: #b0b0b0;
+    padding: 25px;
+    width: 100%;
+    text-decoration: none;
+}
+
   	.filter_type{
 
   	}
@@ -142,6 +146,7 @@ body {
   	    color:green;
   		font-size:150%;
   		padding-left: 30px;
+  		position:relative;
   		text-decoration: none;
   	  	display:inline-block;
     		vertical-align:middle;
